@@ -1,3 +1,5 @@
+- install icon according to specification (again) (2024/04/20 MS)
+
 1.1.8:
 - added simplified ball get target algorithm (2024/04/21 MS)
 - properly install icon (2024/04/20 MS)
